Fix issue when scrolling causing skill lines to overlap with navigation

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
     /* background: #252525; */
     background: linear-gradient(to right, #252525, #22092C);
+    width: 100%;
 }
 
 html {
@@ -11,8 +12,12 @@ html {
 
 
 /* Navbar Starts */
-/* Navbar Items Starts */
-nav {
+header {
+  position: fixed;
+  z-index: 1000;
+}
+
+header nav {
     background-color: #121212;
     width: 100%;
     height: 3rem;
@@ -22,10 +27,6 @@ nav {
     position: fixed;
   }
 
-header {
-    position: fixed;
-}
-
 header .navbar ul {
     list-style: none;
     display: flex;
@@ -33,23 +34,21 @@ header .navbar ul {
     padding-right: 6rem;
   }
 
-  header .navbar ul li a {
+header .navbar ul li a {
     font-size: 1rem;
-    color: white;
+    color: #EEEEEE;
     font-weight: 600;
     text-decoration: none;
     letter-spacing: 0.04rem;
     transition: 0.2s;
   }
 
-  header .navbar ul li a.active,
-  header .navbar ul li a:hover {
+header .navbar ul li a.active,
+header .navbar ul li a:hover {
     color: #F39F5A;
     border-bottom: 0.2rem solid #F39F5A;
     padding: 0.2rem 0;
   }
-
-/* Navbar Items Ends */
 /* Navbar Emds */
 
 
@@ -71,7 +70,6 @@ header .navbar ul {
     padding-top: 0%;
     border-radius: 50%;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-    cursor: pointer;
   }
 
 
@@ -87,6 +85,26 @@ header .navbar ul {
     font-size: 3rem;
     color: #EEEEEE;
 
+}
+
+@media only screen and (max-width: 768px) {
+.home .intro h2 {
+    font-size: 2rem;
+}
+.home .intro h3 {
+  font-size: 1.75rem;
+}
+.home .intro p {
+  font-size: 0.8rem;
+}
+
+.home .socials {
+  margin-left: 0rem;
+}
+
+.home .intro {
+  margin-left: 20%;
+}
 }
 
 .home .intro h2 span {
@@ -154,29 +172,18 @@ header .navbar ul {
 .home .socials {
   margin-top: 0rem;
   padding-top: 0;
-
 }
 
 .home .socials .social-icons{
   margin-bottom: 1.5rem;
   list-style: none;
-  margin-top: 0rem;
-  margin-left: 10rem;
+  margin-left: 8rem;
   margin-right: 0;
 }
 
-/* .home .socials .social-icons li {
-  display: inline-block;
-  margin-bottom: 14px;
-} */
-
 .home  .social-icons a {
   font-size: 1.5rem;
-  display: inline-block;
   line-height: 3rem;
-  width: 3rem;
-  height: 3rem;
-  text-align: center;
   margin-right: 1.25rem;
   color: #EEEEEE;
 }
@@ -308,6 +315,7 @@ h2.devops {
   color:#fff;
   top:-1.25rem; 
 }
+
 
 .orangeline { 
   height: 0.5rem; 
